[#] [docs] java
+ java module 目录说明
+ java module 命令行生成示例